--- a/project/index.html
+++ b/project/index.html
@@ -263,16 +263,16 @@
   <div class="row slideanim">
     <div class="col-sm-4">
       <!--span class="glyphicon glyphicon-search logo-small"></span>-->
-    <img src="findicon.png" height="200" width="200">
+     <img src="findicon.png" height="200" width="200">
       <a class="btn btn-primary btn-lg btn-block" style="background-color: #f5411e" "border-color: #ddd #ddd #ddd #ddd" href="secondaryfind.html" role="button">Find Reviews Near You</a>
-      <p>Search for reviews about locations of interest.</p>
-    </div>
+        <p>Search for reviews about locations of interest.</p></div>
     <div class="col-sm-4">
       <!--<span class="glyphicon glyphicon-book logo-small"></span>-->
     <img src="review.png" height="200" width="200">
      <a class="btn btn-primary btn-lg btn-block"  style="background-color: #f5411e" "border-color: #ddd #ddd #ddd #ddd" href="secondary.html" role="button">Write a Review</a>
       <p>Give a review about a location.</p>
-    </div>
+        </div>
+      </div> 
     <div class="col-sm-4"> 
     </div>
   </div>
